...
            })
    }

    Scaffold(
        floatingActionButton = {
            FloatingActionButton(onClick = { showDialog = true }) {
                Icon(Icons.Filled.Add, contentDescription = "Add Grocery List")
            }
        }
    ) { innerPadding ->
        val groceryLists by viewModel.groceryLists.collectAsState()
        LazyColumn(contentPadding = innerPadding) {
            items(groceryLists) { groceryList ->
...
